# Reticulum-rs

./: .gitignore  Cargo.toml  PROTOBUF_FEATURE_SUMMARY.md  README.md  build.rs
.github/workflows/: ci.yml
docs/plans/: 2026-01-23-reticulum-lxmf-support.md
examples/: channel_client.rs  channel_server.rs  channel_util.rs  kaonic_mesh.rs  kaonic_tcp_mesh.rs  link_and_channel_server.rs  multihop.rs  udp_announce.rs  udp_echo.rs  udp_link.rs  unix_socket_client.rs  unix_socket_server.rs
examples/daemon/: config.rs  convert_config.rs  main.rs
examples/utils/: channel.rs
reticulum-async/: Cargo.toml
reticulum-async/examples/: kaonic_client.rs  link_client.rs  multihop.rs  tcp_client.rs  tcp_server.rs  udp_link.rs
reticulum-async/src/: iface.rs  lib.rs  transport.rs
reticulum-async/src/iface/: hdlc.rs  tcp_client.rs  tcp_server.rs  udp.rs
reticulum-async/src/iface/kaonic/: kaonic_grpc.rs
reticulum-async/src/transport/: announce_limits.rs  announce_table.rs  link_table.rs  packet_cache.rs  path_requests.rs  path_table.rs
reticulum-async/tests/: hop_test.rs  tcp_hdlc_test.rs
reticulum-core/: Cargo.toml
reticulum-core/src/: codec.rs  destination.rs  error.rs  hash.rs  identity.rs  lib.rs  packet.rs  serde.rs
reticulum-core/src/crypt/: fernet.rs
reticulum-core/src/destination/: link.rs  link_map.rs
reticulum-daemon/: Cargo.toml
reticulum-daemon/src/: config.rs  main.rs
rnsd-rs/: Cargo.toml
rnsd-rs/src/: config.rs  main.rs
src/: buffer.rs  channel.rs  destination.rs  error.rs  hash.rs  identity.rs  iface.rs  lib.rs  packet.rs  pqc.rs  transport.rs
src/crypt/: fernet.rs
src/destination/: link.rs
src/iface/: hdlc.rs  kaonic.rs  tcp_client.rs  tcp_server.rs  udp.rs  unix_socker_server.rs  unix_socket_client.rs
src/iface/kaonic/: kaonic_grpc.rs
src/transport/: announce_table.rs  link_table.rs  path_requests.rs  path_table.rs  save_and_forward.rs  store_and_forward.rs
tests/: channels.rs  hop_test.rs  hop_test_socket.rs  lxmf_packet_limits.rs  lxmf_receipt_callbacks.rs  python.rs  tcp_hdlc_test.rs
tests/rns-py-configs/udp/: config
