[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
categories = ["network-programming"]
keywords = ["reticulum", "mesh", "radio", "async"]

description = """
Reticulum-rs is a Rust implementation of the Reticulum Network Stack - a cryptographic, 
decentralised, and resilient mesh networking protocol designed for communication over any physical 
layer.

This project brings Reticulum's capabilities to the Rust ecosystem, enabling embedded, and 
constrained deployments with maximum performance and minimal dependencies.
"""

[dependencies]

# Protobuf and gRPC
tonic = "0.13.0"
prost = "0.13.5"

# Crypto
crypto-common = { version = "0.1.6", features = ["rand_core"] }
aes = "0.8.4"
cbc = "0.1.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"

# Hash
hmac = "0.12.1"
sha2 = "0.10.8"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1.44.2", features = ["rt", "net", "io-util", "sync", "time", "macros"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

rmp = "0.8.14"
serde = { version = "1.0.219", features = ["derive"] }

# Logging
log = "0.4.27"
env_logger = "0.10"

[features]
default = ["alloc", "tokio-full"]
alloc = []
fernet-aes128 = []
# Full tokio features for desktop platforms. Disable for ESP32/embedded.
tokio-full = ["tokio/rt-multi-thread", "tokio/signal"]

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["test-util"] }

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"
required-features = ["tokio-full"]

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"
required-features = ["tokio-full"]

[[example]]
name = "udp_link"
path = "examples/udp_link.rs"
required-features = ["tokio-full"]

[[example]]
name = "link_client"
path = "examples/link_client.rs"
required-features = ["tokio-full"]

[[example]]
name = "kaonic_client"
path = "examples/kaonic_client.rs"
required-features = ["tokio-full"]

[[example]]
name = "testnet_client"
path = "examples/testnet_client.rs"
required-features = ["tokio-full"]

[[example]]
name = "kaonic_tcp_mesh"
path = "examples/kaonic_tcp_mesh.rs"
required-features = ["tokio-full"]

[[example]]
name = "kaonic_mesh"
path = "examples/kaonic_mesh.rs"
required-features = ["tokio-full"]

[[example]]
name = "multihop"
path = "examples/multihop.rs"
required-features = ["tokio-full"]
