[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
categories = ["network-programming"]
keywords = ["reticulum", "mesh", "radio", "async"]

description = """
Reticulum-rs is a Rust implementation of the Reticulum Network Stack - a cryptographic, 
decentralised, and resilient mesh networking protocol designed for communication over any physical 
layer.

This project brings Reticulum's capabilities to the Rust ecosystem, enabling embedded, and 
constrained deployments with maximum performance and minimal dependencies.
"""

[dependencies]
reticulum-core = { version = "*", path = "reticulum-core" }

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.15"

rmp = "0.8.14"
serde = { version = "1.0.219", features = ["derive"] }

# Logging
log = "0.4.27"
env_logger = "0.10"

[features]
default = ["alloc"]
alloc = ["reticulum-core/alloc"]
fernet-aes128 = ["reticulum-core/fernet-aes128"]
python-tests = []

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
serde_json = "1.0.150"
tokio = { version = "1.44.2", features = ["test-util"] }

[workspace]
members = [
  "reticulum-core",
  "reticulum-daemon"
]

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "udp_link"
path = "examples/udp_link.rs"

[[example]]
name = "link_client"
path = "examples/link_client.rs"

[[example]]
name = "testnet_client"
path = "examples/testnet_client.rs"

[[example]]
name = "multihop"
path = "examples/multihop.rs"
