[package]
name = "reticulum-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
crypto-common = { version = "0.1.6", features = ["rand_core"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4.27"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rmp = "0.8.14"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[features]
default = ["alloc"]
alloc = []
fernet-aes128 = []
