[package]
name = "rnsd-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "rnsd-rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
dirs = "6.0.0"
log = "0.4.27"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.9.11"
reticulum = { path = ".." }

[[bin]]
name = "rnsd-rs"
path = "src/main.rs"
